# data-uri-utils

./: Cargo.toml  flake.nix
src/: lib.rs
