[package]
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
description = "utils to convert types to data uri"
edition = "2021"
license = "ISC"
name = "data-uri-utils"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"
image = "0.24.2"
mime = "0.3.13"
once_cell = "1.10.0"
percent-encoding = "2.1.0"
regex = "1.1.7"
